5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1593_1805.log
== TEST (2019-03-28 10:16:16) 
-- CODE:
A=float(input("Insira as coordenadas do ponto A: "))
B=float(input("Insira as coordenadas do ponto B: "))

xm=(xb + xa)/2
ym=(yb+ya)/2



print(round(xm,1))
print(round(ym,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    xm=(xb + xa)/2
NameError: name 'xb' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:18:43) 
-- CODE:
xa=float(input("Insira as coordenadas do ponto Xa: "))
ya=float(input("Insira as coordenadas do ponto Ya: "))
xb=float(input("Insira as coordenadas do ponto Xb: "))
yb=float(input("Insira as coordenadas do ponto Yb: "))

xm=(xb + xa)/2
ym=(yb+ya)/2



print(round(xm,1))
print(round(ym,1))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:19:08) 
-- CODE:
xa=float(input("Insira as coordenadas do ponto Xa: "))
ya=float(input("Insira as coordenadas do ponto Ya: "))
xb=float(input("Insira as coordenadas do ponto Xb: "))
yb=float(input("Insira as coordenadas do ponto Yb: "))

xm=(xb + xa)/2
ym=(yb+ya)/2



print(round(xm,1))
print(round(ym,1))
-- EXECUTION TIME:
0.114383
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
